# rhizproto

./: .gitignore  ATTESTATION_SDK_USAGE.md  AT_PROTOCOL_IMPLEMENTATION_GUIDE.md  AT_PROTOCOL_NATIVE_MIGRATION.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  EXECUTION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTUITION_INTEGRATION_ANALYSIS.md  PHASE_2A_IMPLEMENTATION_GUIDE.md  PHASE_2A_PROGRESS_TRACKER.md  PROJECT_OVERVIEW.md  PROTOCOL_IMPROVEMENTS_FROM_FUNDRHIZ.md  PROTOCOL_IMPROVEMENTS_V2_ENHANCED.md  PROTOCOL_IMPROVEMENTS_V3_IMPLEMENTATION.md  PROTOCOL_PLANNING_SUMMARY.md  PROTOCOL_SPECIFICATION.md  QUICK_START_GUIDE.md  README.md  README_AT_PROTOCOL_NATIVE.md  REFACTOR_STATUS.md  RHIZ_ATTESTATION_IMPLEMENTATION_PLAN.md  RHIZ_PROTOCOL_ROADMAP.md  START_HERE.md  STATUS.md  docker-compose.rhiz.yml  pnpm-lock.yaml
services/rhiz-api/: .dockerignore  BAML_INTEGRATION.md  PHASE1_INFRASTRUCTURE_COMPLETE.md  README.md  pyproject.toml
services/rhiz-api/alembic/: env.py
services/rhiz-api/alembic/versions/: 001_did_migration.py  002_attestation_tables.py  002_performance_optimizations.py
services/rhiz-api/app/: config.py  main.py
services/rhiz-api/app/api/: __init__.py  agents.py  conviction.py  entities.py  graph.py  health.py  internal.py
services/rhiz-api/app/core/: base_service.py  config.py  dependencies.py  exceptions.py  testing.py  (+1 more)
services/rhiz-api/baml_src/: clients.baml  generators.baml  intro_orchestration.baml  relationship_extraction.baml  trust_explanations.baml
services/rhiz-api/tests/: __init__.py  test_main.py
(+133 files in other folders)
